--- a/pages/Casinos-Online-con-Bonos-Sin-Depósito.html
+++ b/pages/Casinos-Online-con-Bonos-Sin-Depósito.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="/styles/styles-Sobre-Nosotros.css">
     <link rel="icon" href="../IMG/TRC.png">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7JYGDJ4YCG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7JYGDJ4YCG');
+</script>
 <body>
     <!-- Barra de navegación -->
     <header>
@@ -80,10 +89,18 @@
     <script src="../scripts/scripts-Sobre-Nosotros.js"></script>
 
     <footer>
-        <a style="color: black;" href="./Politica-de-Privacidad.html">Política de Privacidad</a><br><br>
-        <a style="color: black;" href="./Terminos-y-Condiciones.html">Términos y Condiciones</a><br><br>
-        <a style="color: black;" href="./sobre-nosotros.html">Sobre Nosotros</a>
-        <p>&copy; 2024 Terecomiendo Online. Todos los derechos reservados.</p>
+        <div class="footer-content">
+            <a href="https://t.me/Terecomiendo_online">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m11.985 15.408l3.242 3.686c1.2 1.365 1.801 2.048 2.43 1.881c.628-.166.844-1.064 1.275-2.861l2.39-9.968c.665-2.768.997-4.151.259-4.834s-2.017-.175-4.575.84L5.14 8.865c-2.046.813-3.069 1.219-3.134 1.917a1 1 0 0 0 0 .214c.063.699 1.084 1.108 3.128 1.927c.925.371 1.388.557 1.72.912q.056.06.108.124c.306.38.436.88.697 1.876l.489 1.867c.253.97.38 1.456.713 1.522s.622-.336 1.201-1.141zm0 0l-.317-.33c-.362-.378-.543-.566-.543-.8s.18-.423.543-.8l3.573-3.724" color="currentColor"/></svg>
+            </a>
+            <a href="terecomiendo.online@gmail.com">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20px" height="20px" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
+            </a>
+            <a href="./Politica-de-Privacidad.html">Política de Privacidad</a>
+            <a href="./Terminos-y-Condiciones.html">Términos y Condiciones</a>
+            <a href="./sobre-nosotros.html">Sobre Nosotros</a>
+            <p>&copy; 2024 Terecomiendo Online. Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
