--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="https://1wnurc.com/?sub1=1WINBONOABRIL#fjq9" target="_blank">
+                            <a href="https://1wzlcz.life/?p=fjq9" target="_blank">
                             <img src="./IMG/1win.webp" alt="Logo de Codere" class="logo-casino">
                             </a>                     
                             <div>1win</div><br>
@@ -311,7 +311,7 @@
                             <img src="/IMG/Mastercard-logo.svg.png" alt="MasterCard" class="metodo-deposito">
                             <img src="./IMG/Skrill_logo.svg.png" alt="Skrill" class="metodo-deposito">
                             <img src="./IMG/mplogo.png" alt="Mercado pago" class="metodo-deposito">
-                            <a href="https://1wnurc.com/?sub1=1WINBONOABRIL#fjq9" target="_blank" class="boton">Visitar Casino</a>
+                            <a href="https://1wzlcz.life/?p=fjq9" target="_blank" class="boton">Visitar Casino</a>
                         </td>
                     </tr>
                     <tr>
