--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="https://refpa7921972.top/L?tag=d_3353317m_1599c_&site=3353317&ad=1599&r=registration" target="_blank">
+                            <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank">
                                 <img src="./IMG/1xbet.jpg" alt="Logo de 1xbet" class="logo-casino">
                             </a>
                             <div>1XBET</div><br>
@@ -233,7 +233,7 @@
                             <img src="./IMG/Skrill_logo.svg.png" alt="Skrill" class="metodo-deposito">
                             <img src="./IMG/mplogo.png" alt="Mercado Pago" class="metodo-deposito">
                             <img src="./IMG/Astropay.png" alt="AstroPay" class="metodo-deposito">
-                            <a href="https://refpa7921972.top/L?tag=d_3353317m_1599c_&site=3353317&ad=1599&r=registration" target="_blank" class="boton">Visitar Casino</a>
+                            <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank" class="boton">Visitar Casino</a>
                         </td>
                     </tr>
                     <tr>
