--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
             <h2>El mejor casino online en Argentina</h2>
             <div class="casino-destacado">
                 <div class="casino-destacado-header">
-                    <h3 id="textmp">MegaPari</h3><br>
+                    <h3 id="textmp">1XBET</h3><br>
                     <div class="casino-destacado-bonificacion">
                         <p>OFERTA DE BONIFICACIÓN</p>
-                        <p><strong>100% hasta $88.000 ARS ARS</strong></p>
+                        <p><strong>100% hasta $72.500 ARS</strong></p>
                     </div>
                 </div>
                 <div class="casino-destacado-info">
                     <div class="casino-destacado-logo">
-                        <a href="https://refpaiozdg.top/L?tag=d_3089223m_25437c_&site=3089223&ad=25437&r=registration/" target="_blank">
-                        <img src="./IMG/unnamed.png" alt="Logo de MegaPari">
+                        <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank">
+                        <img src="./IMG/1xbet.jpg" alt="Logo de MegaPari">
                         </a>
                         
                         <p class="calificacion">Calificación: 4.8/5 <i class="icono-info"></i></p>
-                        <a href="https://refpaiozdg.top/L?tag=d_3089223m_25437c_&site=3089223&ad=25437&r=registration/" target="_blank" class="boton">VISITA EL CASINO</a>
+                        <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank" class="boton">VISITA EL CASINO</a>
                     </div>
                     <div class="casino-destacado-detalles">
-                        <p><strong>Velocidad de pago:</strong> 2 Días</p>
+                        <p><strong>Velocidad de pago:</strong> 1 Día</p>
                         <p><strong>Tasa de ganancias:</strong> 93.00%</p>
                         <ul>
                             <li></li>
@@ -80,12 +80,11 @@
                         <img src="./IMG/Mastercard-logo.svg.png" alt="MasterCard" class="metodo-deposito">
                         <img src="./IMG/pagoFacil.jpeg" alt="Skrill" class="metodo-deposito">
                         <img src="./IMG/mplogo.png" alt="Neteller" class="metodo-deposito">
-                        <img src="./IMG/lemon.png" alt="PayPal" class="metodo-deposito">
                         <img src="./IMG/Astropay.png" alt="AstroPay" class="metodo-deposito">
                     </div>
                 </div>
             </div>
-            <p class="casino-destacado-nota">MegaPari es el sitio más valorado por los expertos de casinos que lo han clasificado en el 2024 como el mejor sitio para jugadores argentinos</p>
+            <p class="casino-destacado-nota">1XBET es el sitio más valorado por los expertos de casinos que lo han clasificado en el 2024 como el mejor sitio para jugadores argentinos</p>
         </section>
 
         <section id="guiaTexth2">
@@ -212,15 +211,15 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank">
-                                <img src="./IMG/1xbet.jpg" alt="Logo de 1xbet" class="logo-casino">
+                            <a href="https://refpaiozdg.top/L?tag=d_3089223m_25437c_&site=3089223&ad=25437&r=registration/" target="_blank">
+                                <img src="./IMG/unnamed.png" alt="Logo de 1xbet" class="logo-casino">
                             </a>
-                            <div>1XBET</div><br>
+                            <div>MegaPari</div><br>
                             <div>Calificación: 4.6/5</div>
                         </td>
                         <td>
                             <div id="oBText">Oferta de Bonificación:</div><br>
-                            <div>100% hasta $72.500 ARS</div>
+                            <div>100% hasta $88.000 ARS</div>
                         </td>
                         <td>
                             <div id="oBText">Velocidad de pago:</div>
@@ -231,9 +230,9 @@
                         <td>
                             <img src="./IMG/VISA-Logo.png" alt="Visa" class="metodo-deposito">
                             <img src="./IMG/Skrill_logo.svg.png" alt="Skrill" class="metodo-deposito">
-                            <img src="./IMG/mplogo.png" alt="Mercado Pago" class="metodo-deposito">
                             <img src="./IMG/Astropay.png" alt="AstroPay" class="metodo-deposito">
-                            <a href="https://click.betiexaff.com/NnvAcnIP" target="_blank" class="boton">Visitar Casino</a>
+                            <img src="./IMG/lemon.png" alt="PayPal" class="metodo-deposito">
+                            <a href="https://refpaiozdg.top/L?tag=d_3089223m_25437c_&site=3089223&ad=25437&r=registration/" target="_blank" class="boton">Visitar Casino</a>
                         </td>
                     </tr>
                     <tr>
