--- a/pages/Cuál-es-el-casino-que-más-paga-en-Argentina.html
+++ b/pages/Cuál-es-el-casino-que-más-paga-en-Argentina.html
@@ -48,13 +48,13 @@
                 <img src="../IMG/bigwin.jpg" alt="Casinos que más pagan">
         
             </div>
-            <h2 class="sobreNosotrosText">MegaPari: El Casino que Más Paga en Argentina</h2>
-            <p>MegaPari se destaca como el casino online que más paga en Argentina, ofreciendo altas tasas de retorno al jugador (RTP) y promociones generosas que aumentan tus oportunidades de ganar. MegaPari ofrece una vasta selección de juegos, desde tragamonedas hasta juegos de mesa y casino en vivo, todos desarrollados por proveedores de software de renombre. Sus bonos de bienvenida y promociones regulares son altamente atractivos, proporcionando a los jugadores un impulso significativo en sus ganancias potenciales.</p>
+            <h2 class="sobreNosotrosText">1XBET: El Casino que Más Paga en Argentina</h2>
+            <p>1XBET se destaca como el casino online que más paga en Argentina, ofreciendo altas tasas de retorno al jugador (RTP) y promociones generosas que aumentan tus oportunidades de ganar. 1XBET ofrece una vasta selección de juegos, desde tragamonedas hasta juegos de mesa y casino en vivo, todos desarrollados por proveedores de software de renombre. Sus bonos de bienvenida y promociones regulares son altamente atractivos, proporcionando a los jugadores un impulso significativo en sus ganancias potenciales.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">Otros Casinos con Buenas Tasas de Pago</h2>
-            <h2>1. 1xbet</h2>
-            <p>1xbet es conocido por sus amplias opciones de juegos y sus atractivas promociones. Ofrece una excelente RTP en sus tragamonedas y juegos de mesa, y su plataforma fácil de usar es perfecta tanto para principiantes como para jugadores experimentados. Las opciones de pago seguras y rápidas de 1xbet aseguran que los jugadores puedan disfrutar de sus ganancias sin demoras.</p>
+            <h2>1. MegaPari</h2>
+            <p>MegaPari es conocido por sus amplias opciones de juegos y sus atractivas promociones. Ofrece una excelente RTP en sus tragamonedas y juegos de mesa, y su plataforma fácil de usar es perfecta tanto para principiantes como para jugadores experimentados. Las opciones de pago seguras y rápidas de MegaPari aseguran que los jugadores puedan disfrutar de sus ganancias sin demoras.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">2. BetWarrior</h2>
