--- a/pages/Dónde-hacer-apuestas-deportivas-en-Argentina.html
+++ b/pages/Dónde-hacer-apuestas-deportivas-en-Argentina.html
@@ -51,12 +51,12 @@
             <h2 class="sobreNosotrosText">Plataformas de Apuestas Deportivas en Argentina</h2>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">1. MegaPari</h2>
-            <p>MegaPari es otra plataforma popular en Argentina, conocida por su amplia gama de eventos deportivos y mercados de apuestas. Ofrece apuestas en vivo y una interfaz amigable para el usuario. MegaPari también proporciona varios bonos y promociones que pueden maximizar tus ganancias.</p>
+            <h2 class="sobreNosotrosText">1. 1XBET</h2> 
+            <p>1XBET es una de las casas de apuestas más reconocidas y utilizadas a nivel mundial. En Argentina, ofrece una amplia variedad de deportes, incluyendo fútbol, tenis, básquetbol y más. 1xbet se destaca por sus cuotas competitivas, una interfaz fácil de usar y múltiples opciones de apuestas en vivo. Además, cuenta con una extensa oferta de métodos de pago y promociones atractivas para nuevos usuarios.</p>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">2. 1xbet</h2>
-            <p>1xbet es una de las casas de apuestas más reconocidas y utilizadas a nivel mundial. En Argentina, ofrece una amplia variedad de deportes, incluyendo fútbol, tenis, básquetbol y más. 1xbet se destaca por sus cuotas competitivas, una interfaz fácil de usar y múltiples opciones de apuestas en vivo. Además, cuenta con una extensa oferta de métodos de pago y promociones atractivas para nuevos usuarios.</p>
+            <h2 class="sobreNosotrosText">2. MegaPari</h2>
+            <p>MegaPari es otra plataforma popular en Argentina, conocida por su amplia gama de eventos deportivos y mercados de apuestas. Ofrece apuestas en vivo y una interfaz amigable para el usuario. MegaPari también proporciona varios bonos y promociones que pueden maximizar tus ganancias.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">3. BetWarrior</h2>
