--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="icon" href="./IMG/icon.jpg">
 </head>
 <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMPYE0W30J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EMPYE0W30J');
+</script>
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7JYGDJ4YCG"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
