--- a/pages/Dónde-hacer-apuestas-deportivas-en-Argentina.html
+++ b/pages/Dónde-hacer-apuestas-deportivas-en-Argentina.html
@@ -60,20 +60,20 @@
             <h2 class="sobreNosotrosText">Plataformas de Apuestas Deportivas en Argentina</h2>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">1. 1XBET</h2> 
-            <p>1XBET es una de las casas de apuestas más reconocidas y utilizadas a nivel mundial. En Argentina, ofrece una amplia variedad de deportes, incluyendo fútbol, tenis, básquetbol y más. 1xbet se destaca por sus cuotas competitivas, una interfaz fácil de usar y múltiples opciones de apuestas en vivo. Además, cuenta con una extensa oferta de métodos de pago y promociones atractivas para nuevos usuarios.</p>
+            <h2 class="sobreNosotrosText">1. 1win</h2> 
+            <p>1win es una de las casas de apuestas más reconocidas y utilizadas a nivel mundial. En Argentina, ofrece una amplia variedad de deportes, incluyendo fútbol, tenis, básquetbol y más. 1xbet se destaca por sus cuotas competitivas, una interfaz fácil de usar y múltiples opciones de apuestas en vivo. Además, cuenta con una extensa oferta de métodos de pago y promociones atractivas para nuevos usuarios.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">2. MegaPari</h2>
             <p>MegaPari es otra plataforma popular en Argentina, conocida por su amplia gama de eventos deportivos y mercados de apuestas. Ofrece apuestas en vivo y una interfaz amigable para el usuario. MegaPari también proporciona varios bonos y promociones que pueden maximizar tus ganancias.</p>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">3. BetWarrior</h2>
-            <p>BetWarrior es una opción local que ha ganado mucha tracción entre los apostadores argentinos. Ofrece una experiencia de usuario fluida, con una gran variedad de deportes y mercados de apuestas. BetWarrior es particularmente conocido por sus promociones y bonos para nuevos jugadores, así como por su soporte al cliente en español.</p>
+            <h2 class="sobreNosotrosText">3. 1XBET</h2>
+            <p>1XBET es una opción local que ha ganado mucha tracción entre los apostadores argentinos. Ofrece una experiencia de usuario fluida, con una gran variedad de deportes y mercados de apuestas. BetWarrior es particularmente conocido por sus promociones y bonos para nuevos jugadores, así como por su soporte al cliente en español.</p>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">4. 1win</h2>
-            <p>1win se ha convertido en una plataforma popular gracias a su oferta variada de deportes y eventos para apostar. Con una interfaz intuitiva y apuestas en vivo, 1win atrae tanto a jugadores nuevos como a experimentados. Además, ofrece bonos de bienvenida y promociones que pueden mejorar significativamente la experiencia de apuesta.</p>
+            <h2 class="sobreNosotrosText">4. Betano</h2>
+            <p>Betano se ha convertido en una plataforma popular gracias a su oferta variada de deportes y eventos para apostar. Con una interfaz intuitiva y apuestas en vivo, 1win atrae tanto a jugadores nuevos como a experimentados. Además, ofrece bonos de bienvenida y promociones que pueden mejorar significativamente la experiencia de apuesta.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">5. Betsson</h2>
@@ -88,8 +88,8 @@
             <p>22bet es una opción popular entre los apostadores argentinos debido a su amplia cobertura de eventos deportivos y mercados de apuestas. Ofrece cuotas competitivas, una interfaz fácil de usar y numerosas opciones de apuestas en vivo. 22bet también proporciona bonos de bienvenida y promociones regulares.</p>
         </section>
         <section>
-            <h2 class="sobreNosotrosText">8. Betano</h2>
-            <p>Betano ha ganado popularidad rápidamente gracias a su oferta completa de deportes y mercados de apuestas. Con una plataforma fácil de navegar y numerosas opciones de apuestas en vivo, Betano se convierte en una opción atractiva para los apostadores en Argentina. También ofrece promociones y bonos atractivos para nuevos y recurrentes jugadores.</p>
+            <h2 class="sobreNosotrosText">8. BC GAME</h2>
+            <p>BC GAME ha ganado popularidad rápidamente gracias a su oferta completa de deportes y mercados de apuestas. Con una plataforma fácil de navegar y numerosas opciones de apuestas en vivo, Betano se convierte en una opción atractiva para los apostadores en Argentina. También ofrece promociones y bonos atractivos para nuevos y recurrentes jugadores.</p>
         </section>
         <section>
             <h2 class="sobreNosotrosText">Aspectos a Considerar al Elegir una Plataforma de Apuestas Deportivas</h2>
